# mujoco_ocs2_quadruped_controller

./: .gitignore  readme.md
cmd_mapping/: CMakeLists.txt  package.xml
cmd_mapping/src/: cmd_mapping.cpp
custom_msgs/: CMakeLists.txt
custom_msgs/msg/: ActuatorCmds.msg  UserCmds.msg  UserInputs.msg
hardware_mujoco/: CMakeLists.txt  HardwareMujoco.xml  package.xml
hardware_mujoco/include/hardware_mujoco/: HardwareMujoco.h
hardware_mujoco/src/: HardwareMujoco.cpp
keyboard_control/src/: keyboard_publisher.cpp
keyboard_input/: CMakeLists.txt  package.xml
keyboard_input/src/: keyboard_publisher.cpp
mujoco_interface/: CMakeLists.txt  package.xml
mujoco_interface/launch/: mujoco.launch.py
mujoco_interface/src/: mujoco_node.cpp
mujoco_sim/: CMakeLists.txt  package.xml
mujoco_sim/include/mujoco_node/: simulate.h
mujoco_sim/launch/: mujoco.launch.py
mujoco_sim/src/: MujocoMsgHandler.cpp  mujoco_node.cpp
mujoco_simulator/: CMakeLists.txt  package.xml
mujoco_simulator/include/mujoco_node/: mujoco_msg_handler.h
mujoco_simulator/launch/: mujoco.launch.py
mujoco_simulator/src/: mujoco_msg_handler.cpp
ocs2_quadruped_controller/: CMakeLists.txt  package.xml
ocs2_quadruped_controller/config/: visualize_ocs2.rviz
ocs2_quadruped_controller/launch/: controller.launch.py
ocs2_quadruped_controller/src/: Ocs2QuadrupedController.cpp  Ocs2QuadrupedController.h  SafetyChecker.h
ocs2_quadruped_controller/src/control/: GaitManager.cpp  StandController.cpp  TargetManager.cpp
ocs2_quadruped_controller/src/estimator/: LinearKalmanFilter.cpp  StateEstimateBase.cpp  TerrainEstimator.cpp
ocs2_quadruped_controller/src/wbc/: WeightedWbc.cpp
robot_description/b2_description/: CMakeLists.txt  package.xml
robot_description/b2_description/config/: robot_control.yaml
robot_description/b2_description/xacro/: ros2_control.xacro
robot_description/b2_description/xml/: b2.xml  scene.xml  scene_terrain.xml
robot_description/bqr3_description/: CMakeLists.txt  package.xml
robot_description/bqr3_description/launch/: rviz_display.launch.py
robot_description/bqr3_description/urdf/: robot.urdf
robot_description/bqr3_description/xml/: robot.xml
robot_description/galileo_mini15_description/: CMakeLists.txt  package.xml
robot_description/galileo_mini15_description/config/: robot_control.yaml
robot_description/galileo_mini15_description/launch/: rviz_display.launch.py
robot_description/galileo_mini15_description/meshes/: FL_abd_link.STL  trunk.STL  (+4 more)
robot_description/galileo_mini_description/: CMakeLists.txt
robot_description/go2_description/: CMakeLists.txt  package.xml
robot_description/simple_quadruped/: CMakeLists.txt  package.xml
robot_description/simple_quadruped/config/rviz/: rviz_display.rviz
robot_description/simple_quadruped/launch/: rviz_visualization.launch.py
robot_description/simple_quadruped/urdf/: simple_quadruped.urdf
terrain_generator/: scene_input.xml  scene_output.xml  terrain_generator.py
user_commands/joystick_input/: CMakeLists.txt  README.md  package.xml
user_commands/keyboard_input/: CMakeLists.txt  README.md  package.xml
(+49 files in other folders)
